[gd_scene load_steps=7 format=3 uid="uid://7gflorwo3mp1"]

[ext_resource type="Script" path="res://Enemies/enemy7.gd" id="1_eoc4u"]
[ext_resource type="Texture2D" uid="uid://buqc8m5mtpri2" path="res://Enemies/enemy6.png" id="2_wo3wf"]
[ext_resource type="Texture2D" uid="uid://q61cdaguoylv" path="res://Enemies/enemy7.png" id="3_eh33l"]
[ext_resource type="Texture2D" uid="uid://co856j2owrky2" path="res://Enemies/enemy7_inside.png" id="4_o0f6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5006"]
size = Vector2(17.6777, 14.1421)

[sub_resource type="CircleShape2D" id="CircleShape2D_73kul"]

[node name="Enemy7" type="Area2D"]
scale = Vector2(0.4, 0.4)
collision_layer = 4
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("1_eoc4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.76777, 1.76777)
shape = SubResource("RectangleShape2D_q5006")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_wo3wf")

[node name="Bullet1" type="Area2D" parent="."]
position = Vector2(-20, 0)
scale = Vector2(1.3, 1.3)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet1"]
shape = SubResource("CircleShape2D_73kul")

[node name="Bullet2_Spr" type="Sprite2D" parent="Bullet1"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_eh33l")

[node name="Bullet1_Inside" type="Sprite2D" parent="Bullet1/Bullet2_Spr"]
texture = ExtResource("4_o0f6g")
metadata/_edit_lock_ = true

[node name="Bullet2" type="Area2D" parent="."]
position = Vector2(20, 0)
scale = Vector2(1.3, 1.3)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet2"]
shape = SubResource("CircleShape2D_73kul")

[node name="Bullet2_Spr" type="Sprite2D" parent="Bullet2"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_eh33l")

[node name="Bullet1_Inside" type="Sprite2D" parent="Bullet2/Bullet2_Spr"]
texture = ExtResource("4_o0f6g")
metadata/_edit_lock_ = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Bullet1" to="." method="_on_area_entered"]
[connection signal="area_entered" from="Bullet2" to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoottimer_timeout"]
